--- a/Lab/Client2/OTP_Tool/Form1.resx
+++ b/Lab/Client2/OTP_Tool/Form1.resx
@@ -117,4 +117,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEACABoBQAAJgAAABAQAAABACAAaAQAAI4FAAAoAAAAEAAAACAAAAABAAgAAAAAAEAB
+        AAAAAAAAAAAAAAABAAAAAAAAAAAAAA/G+gAeUnoAVmlqADhbXgAsHR0AAAAAAAAAAACMs7MAaV9eABHq
+        +ABua2oAd/b6AA/R+QAAAAAAMC4uAAAAAABvbGwAEbb7ACwpKgBtaWkAIiEiACEVEgAqJSYAAAAAAA/C
+        +gAAAAAApff6AKH3+gAmICIAi/b5AGX//wAAAAAAY/X5AF31+QBU9fkAD///AC4tLQAM3/8ADtX4AC4i
+        IAAPzfkAAAAAAAAAAAA1MzMANSkpAA+++gAQu/oAIB8hACUfIAAAAAAAJiUmAGpjYwAgHh8AMyoqADMw
+        MAAfSk8AHTJJAC0mJwAwJCQALissACQiIwCQ0tUAbIODAG1rawAWb7sAQubqAClVXgA2naAATPX5AGtq
+        agAR3/MAOaSqABxueQBvbm4AFIS7AErl6wAxLzAAFX+ZAAAAAACP9/kAAAAAAA7Y+ABEPTsAAAAAAAAA
+        AABY9fkAYXl5AJXHywCZ9/oAnff6AFvT1gAAAAAALyQjAAAAAAAjSE4AhPf6AAAAAAAPv/cAAAAAAAAA
+        AAAAAAAAp/v9AGH1+QCw+f4AAAAAAAAAAAAAAAAAELL/AAAAAABru74AAAAAADh9gAAAAAAAAAAAAAAA
+        AAAAAAAAO2BiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJD3+QAAAAAAD837AHz5/QCF9vkAAAAAAAAA
+        AABrYmEAbGRkAAAAAAAAAAAAcvX5ABWFzQAfHBwAAAAAAA7v/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABSZGYAAAAAAKf4+wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEMbpAAAAAAARsvsAF8PNAAAA
+        AAAAAAAAbmhoAI3k6AAAAAAAAAAAAAAAAAB5kpMAAAAAAAAAAAAAAAAAcG9uAAAAAAAN3fsANjIxAEj1
+        +QBO+PwAgfL1AAAAAAAoHx8AAAAAAAAAAAAAAAAAAAAAAA/Y9AAAAAAAAAAAAAAAAAAAAAAAAAAAABtu
+        cwAAAAAAAAAAAAAAAAAAAAAADsz+AAAAAAAAAAAAS6qtAFZQUABZUFEAAAAAAAAAAAAhMTUAAAAAABOT
+        6QAAAAAAAAAAAHv1+QAAAAAAAAAAAAAAAAAAAAAAKigoAAAAAAAjGBcAAAAAAAAAAAAAAAAAAAAAAG6Y
+        mQAAAAAAf/X5ADQtLQBo+PwAf8TGAGv6/gCR9/oAHDhGAAAAAAAAAAAAcXJwAHBvcAAAAAAADtv4AAAA
+        AAAAAAAAAAAAAIf3+gCf+v0AJpOZAAAAAAAAAAAAa2BgAAAAAAB/9/sAAAAAAG1nZwAAAAAAOklKAAAA
+        AAAzMTEAAAAAAAAAAAAAAAAA////AAAAAAAAAuQ5OeQCAAAAAAAAAABJS8MBLi+ebEECAAAAAABJS5wN
+        KQEZLxLNQQIAAABJnxPVuK0nDX5iNTWIAgAARDw8E1+L6lIm5DAwiU4ASfs3DyUTFwoKMT0VFTWJAgQt
+        LDdNJTokJB0zPT0wFkNdNq7fNjtMFxdHBbMxMdcoXfl1cETGTMjHQkjwvjjLKARgfB6A3n9CQh9nViNF
+        r0M/71njUO6xgzRu4iEiI7CSAD5mHFqj80BGNNwMh+BbAAA/PpQbp6JAQBQJ9dA+kgAAAD9YaAurShFA
+        FOE+AwAAAAAAPwjn9xQUhOg+AwAAAAAAAAAAP1dTU1c/AAAAAAD4HwAA4AcAAMADAACAAQAAgAEAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIABAACAAQAAwAMAAOAHAAD4HwAAKAAAABAAAAAgAAAAAQAgAAAA
+        AABABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjDw1YHy89phxPY+cZXoD0GVuA9BxJ
+        Y+cfKj2mIxQNWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACYVEx0gMzqtFY2r/w+76f8Oz///Dsj//w/B
+        //8Qu///EaDp/xZyq/8hLTutJhoTHQAAAAAAAAAAAAAAACcZGBwfTVXOGYSZ/xmDnf8M4f//D876/w/I
+        +f8Pw/n/D7/8/w/C//8XaJn/GGCX/yE/Vs4nHRgcAAAAACgdHwIkPUCtHY6X/y0nJ/8qGhr/FKnA/wzm
+        //8O0/j/D875/w3X//8Tkr//IRMR/yAcHP8ZY5X/JDZCrSkhHwIsHR1WIo+U/y0/QP8vJib/LSQk/yc7
+        Pv8R2+z/DuL7/w7d/P8Oy+z/Hi82/yAZGf8gGxv/HSoy/xtqlP8sIR5WK1JVpy93ev8yKSn/MC4u/y4t
+        Lf8uHR3/IXN6/w76//8P9f//HWl3/yUVFf8iICL/IR8i/yAZGP8aVG//J0hYpzJ2eec4cHL/NCUl/zMx
+        MP8xLy//LyYm/yw0Nf8Ztrj/F7S2/ycvMP8nHR7/JSMk/yMhI/8iFBL/GlRm/yNld+c7gYX2OVdZ/zMh
+        IP8xKir/Liws/y4pKf8rXF//LDc4/yk1N/8kV1r/JyAi/yQfIP8jGhv/JA4O/xw9Sf8fboD2Q4aI9kml
+        p/9AiYv/SJ6g/1C2uP9Xw8b/WM/T/1xjZP9aZGT/TNHU/0C+xP81r7T/KZSX/x56fv8Tk5r/IHyH9kVw
+        ced8////gf///4f///+J////gv///3r2+f9usrT/aZyf/2Xl5v9f////Wf///1D///9A////L////zJ0
+        dedJVFWnn/L0/5/7/f+V9vr/kPf5/4z///94ubz/amNj/2pgYP9qj5D/bfv//2X1+f9f9Pn/Wfn9/1nx
+        9P9EV1inMSkoVoa5uv+t////oPf6/537/v+R7PD/b3Nz/2tnZ/9raWn/amBg/3PHyv92////bfX5/2r/
+        //9btrn/NigoVjAqKgJKT1Ctqezv/6/+//+o/v//g6io/2tiYv9ubGz/bWtr/2tjY/9ue3v/gfDy/4D9
+        //936u3/RUxOrTQrKwIAAAAALSUlHF1sbM6u8fP/p+nt/21rav9qY2L/bWlp/21nZ/9qZGP/aFpa/4LA
+        wf+I7+//UmpqzjImJhwAAAAAAAAAAAAAAAAvJiYdTFNUrYWtr/+Jpqf/g5eY/3uHiP97h4j/gZWX/4Gh
+        o/93qav/SVJSrTMnJh0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3Ly5YVWVlpmqBgedykJD0cI+P9GZ/
+        gOdRY2OmOjAvWAAAAAAAAAAAAAAAAAAAAADwDwAAwAMAAIABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgAEAAMADAADwDwAA
+</value>
+  </data>
 </root>
